# template-cargo-plugin

./: Cargo.toml
src/cargo-hello/: main.rs
