[package]
name = "template-cargo-plugin"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-hello"
path = "src/cargo-hello/main.rs"

[dependencies]
